# srf

./: Cargo.toml
src/: main.rs
src/cli/: mod.rs
src/finder/: config.rs  mod.rs
src/finder/fs/: config.rs  mod.rs
src/finder/fs/find_entry/: config.rs  mod.rs  utils.rs
src/finder/text/: config.rs  mod.rs
src/finder/text/file/: config.rs  mod.rs
src/finder/utils/: mod.rs  templated_regex.rs
src/server/: args.rs  mod.rs
