[package]
name = "srf"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
async-trait = "0.1.73"
clap = { version = "4.3", features = ["derive"] }
erased-serde = "0.3"
futures = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
